src/test/deca/codegen/invalid/cast_error.deca

class A {
}
class B extends A {
}

{
    A a = new A();
    B b;
    b = (B) (a);
}